:bug::wrench: fix horizontal scrollbards on blog page
using margin for the blog sub nav was causing greater than 100%

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -16,7 +16,7 @@
 
   @include media($tablet) {
     width: 100%;
-    margin: 20px 20px;
+    padding: 40px 20px;
   }
 }
 
